--- a/package.json
+++ b/package.json
@@ -8,8 +8,43 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.15.3",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.10.4",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/eslint": "^7.2.10",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/node": "^14.14.41",
+    "@types/prettier": "^2.2.3",
+    "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-plugin-import": "^1.13.3",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "less": "^4.1.1",
+    "less-vars-to-js": "^1.3.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-plugin-antd-less": "^1.1.2",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
+    "sass": "^1.32.11",
+    "typescript": "^4.2.4",
+    "webpack": "^5.35.1"
   }
 }
