--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "prettier -w 'src/**/*.(ts|js)?(x)' && eslint && tsc --noEmit"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "yarn lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.(ts|js)?(x)": ["prettier -w", "eslint"],
+    "*.(ts)?(x)": "tsc --noEmit"
   },
   "dependencies": {
     "antd": "^4.15.3",
@@ -39,11 +47,13 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "less": "^4.1.1",
     "less-vars-to-js": "^1.3.0",
+    "lint-staged": "^10.5.4",
     "next-compose-plugins": "^2.2.1",
     "next-plugin-antd-less": "^1.1.2",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "sass": "^1.32.11",
+    "simple-git-hooks": "^2.4.1",
     "typescript": "^4.2.4",
     "webpack": "^5.35.1"
   }
