--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "prettier -w 'src/**/*.(ts|js)?(x)' && eslint && tsc --noEmit"
+    "tsc-lint": "tsc --noEmit -p ./src/tsconfig.json",
+    "lint": "prettier -w 'src/**/*.(ts|js)?(x)' && eslint && yarn tsc-lint"
   },
   "simple-git-hooks": {
-    "pre-commit": "yarn lint-staged"
-  },
-  "lint-staged": {
-    "src/**/*.(ts|js)?(x)": ["prettier -w", "eslint"],
-    "*.(ts)?(x)": "tsc --noEmit"
+    "pre-commit": "yarn tsc-lint && yarn lint-staged"
   },
   "dependencies": {
+    "@ethersproject/address": "^5.1.0",
+    "@ethersproject/bignumber": "^5.1.1",
+    "@ethersproject/constants": "^5.1.0",
+    "@ethersproject/contracts": "^5.1.1",
+    "@ethersproject/providers": "^5.1.2",
+    "@ethersproject/units": "^5.1.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/network-connector": "^6.1.9",
+    "@web3-react/walletconnect-connector": "^6.1.9",
     "antd": "^4.15.3",
     "antd-dayjs-webpack-plugin": "^1.0.6",
+    "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.13.12"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
