--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "tsc-lint": "tsc --noEmit -p ./src/tsconfig.json",
+    "tsc-lint": "tsc --noEmit -p tsconfig.json",
     "lint": "prettier -w 'src/**/*.(ts|js)?(x)' && eslint && yarn tsc-lint"
   },
   "simple-git-hooks": {
     "pre-commit": "yarn tsc-lint && yarn lint-staged"
   },
   "lint-staged": {
-    "src/**/*.(ts|js)?(x)": ["prettier --write", "eslint"]
+    "src/**/*.(ts|js)?(x)": [
+      "prettier --write",
+      "eslint"
+    ]
   },
   "dependencies": {
     "@ethersproject/address": "^5.1.0",
@@ -31,6 +34,7 @@
     "bignumber.js": "^9.0.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
+    "lint-staged": "^10.5.4",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -59,7 +63,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "less": "^4.1.1",
     "less-vars-to-js": "^1.3.0",
-    "lint-staged": "^10.5.4",
     "next-compose-plugins": "^2.2.1",
     "next-plugin-antd-less": "^1.1.2",
     "prettier": "^2.2.1",
