--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ethersproject/contracts": "^5.1.1",
     "@ethersproject/providers": "^5.1.2",
     "@ethersproject/units": "^5.1.0",
+    "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/network-connector": "^6.1.9",
@@ -35,15 +36,23 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
     "lint-staged": "^10.5.4",
+    "lodash.debounce": "^4.0.8",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.13.12"
+    "react-query": "^3.13.12",
+    "web3": "^1.3.5",
+    "web3-core-method": "^1.3.5",
+    "web3-eth": "^1.3.5",
+    "web3-eth-contract": "^1.3.5",
+    "web3-utils": "^1.3.5",
+    "wolfy87-eventemitter": "^5.2.9"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
     "@types/eslint": "^7.2.10",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^14.14.41",
     "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.3",
